ts config-node -- nothing changed

--- a/backend-chefmate/package.json
+++ b/backend-chefmate/package.json
@@ -3,15 +3,14 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node dist/app.ts",
+    "start": "node app.ts",
     "build": "tsc",
-    "dev": "nodemon --watch ./ --ext ts --exec ts-node app.ts",
+    "dev": "nodemon app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "axios": "^1.9.0",
     "cors": "^2.8.5",
@@ -26,5 +25,6 @@
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
-  }
+  },
+  "description": ""
 }
