--- a/ChefMate/tsconfig.json
+++ b/ChefMate/tsconfig.json
@@ -8,6 +8,10 @@
 
 {
   "compilerOptions": {
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "allowJs": false,
+    "noEmit": true,
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
