--- a/ChefMate/tsconfig.json
+++ b/ChefMate/tsconfig.json
@@ -15,14 +15,16 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "node",
+    // "moduleResolution": "Bundler",
     "strict": true,
     "jsx": "react-jsx",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "types": ["vite/client", "node", "react", "react-dom"]
   },
   "include": ["src"]
 }
