--- a/backend-chefmate/package.json
+++ b/backend-chefmate/package.json
@@ -12,12 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongoose": "^8.15.0"
+    "google-auth-library": "^9.15.1",
+    "jwt-decode": "^4.0.0",
+    "mongoose": "^8.15.0",
+    "react-router-dom": "^7.6.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
