--- a/ChefMate/package.json
+++ b/ChefMate/package.json
@@ -13,6 +13,7 @@
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.9.0",
     "google-auth-library": "^9.15.1",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
