--- a/ChefMate/package.json
+++ b/ChefMate/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.9.0",
     "google-auth-library": "^9.15.1",
     "jwt-decode": "^4.0.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.1"
