--- a/ChefMate/.env.production
+++ b/ChefMate/.env.production
@@ -1,3 +1,3 @@
 VITE_GOOGLE_CLIENT_ID=805405718661-8tba2pt2ham5sgfv4q8omvehddc9ujdd.apps.googleusercontent.com
 
-VITE_API_BASE_URL=https://chefmate-backend-server.onrender.com
+VITE_API_BASE_URL=https://chefmate-backend-server.onrender.com/api
